--- a/Supervised Learning/LinearRegressionAnalysisExample.ipynb
+++ b/Supervised Learning/LinearRegressionAnalysisExample.ipynb
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "source": [
     "<b>The above model calculated the following relationship between LSTAT and MEDV.</b>\n",
-    "- $medv = {\\hat{\\beta_{0}}+{{\\hat{\\beta_{1}}}.lstat}$"
+    "- $medv=\\hat{\\beta _{0}}+\\hat{\\beta _{1}}\\cdot lstat$"
    ],
    "metadata": {
     "collapsed": false,
@@ -273,7 +273,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "<b>How can we see the ${\\hat{\\beta_{0}}$ and ${\\hat{\\beta_{1}}$ values in the model we found? The equation of the line above, ${\\hat{\\beta_{0}}$, shows the point where the line intersects the y-axis and ${\\hat{\\beta_{1}}$ shows the slope. Therefore, we can see this value using the coef_ and intercept_ methods.</b>\n",
+    "<b>How can we see the $\\hat{\\beta _{0}}$ and $\\hat{\\beta _{1}}$ values in the model we found? The equation of the line above, $\\hat{\\beta _{0}}$, shows the point where the line intersects the y-axis and $\\hat{\\beta _{1}}$ shows the slope. Therefore, we can see this value using the coef_ and intercept_ methods.</b>\n",
     "\n"
    ],
    "metadata": {
@@ -286,7 +286,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "- $ {\\hat{\\beta_{0}}$"
+    "- $ \\hat{\\beta _{0}}$"
    ],
    "metadata": {
     "collapsed": false,
@@ -321,7 +321,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "-  ${\\hat{\\beta_{1}}$"
+    "-  $\\hat{\\beta _{1}}$"
    ],
    "metadata": {
     "collapsed": false,
@@ -368,7 +368,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "- $medv = {\\hat{\\beta_{0}}+{{\\hat{\\beta_{1}}}.lstat+{\\hat{\\beta_{2}}.age}$"
+    "- $medv=\\hat{\\beta _{0}}+\\hat{\\beta _{1}}\\cdot lstat+\\hat{\\beta _{2}}\\cdot age$"
    ],
    "metadata": {
     "collapsed": false,
