--- a/Supervised Learning/Validation and Cross Validation/ValidationAndCrossValidation.ipynb
+++ b/Supervised Learning/Validation and Cross Validation/ValidationAndCrossValidation.ipynb
@@ -158,14 +158,89 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "- <b>K-FOLD CROSS VALIDATION</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>For cross validation in Python, we can use the cross_val_score() function in the sklearn.model_selection module. This function accepts the model to be used (linear regression), dependent and non-dependent variable sets, and the number of pieces (cv) to which the data set will be split as arguments. Since the performance indicator (_score) is $R^{2}$, this function generates a string containing $R^{2}$ values equal to the k value, that is, the number of trials performed. </b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 19,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.31784807, 0.5406078 , 0.07608699, 0.42423767, 0.1267687 ])"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "cross_R2 = cross_val_score(model,lstat,medv,cv=5)\n",
+    "cross_R2"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.29710984600668633"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(cross_R2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>As can be seen, the average $R^{2}$ value is 0.55 when we use the whole data set, 0.49 when we distinguish between learning and validation once, and 0.297 when we perform 5-fold cross validation.</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
