--- a/Supervised Learning/Classification Methods/ClassificationMethods.ipynb
+++ b/Supervised Learning/Classification Methods/ClassificationMethods.ipynb
@@ -205,13 +205,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
       "text/plain": "array([0])"
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,6 +221,66 @@
     "estimate = nearest_k.predict(flower_1)\n",
     "estimate"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>As a result, we see an output in the KNeighborsClassifier class. Using this output, we can predict the type of flower whose values have just been measured.</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[1., 0., 0.]])"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimate_prob = nearest_k.predict_proba(flower_1)\n",
+    "estimate_prob"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Our classifier estimated that the newly measured flower was in the Setosa group, that is, 0. While making this estimation, we can see the probability of being in each type calculated using the predict_proba method. Our classifier estimates that the new flower is in the Setosa group with 100% probability.</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
