--- a/Supervised Learning/Classification Methods/ClassificationMethods.ipynb
+++ b/Supervised Learning/Classification Methods/ClassificationMethods.ipynb
@@ -277,6 +277,284 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Now, let's try the k nearest neighbor method using another dataset. As an example, we will use the Glass Identification data from the UCI Machine Learning Repository page. This dataset gives the glass type with the various element amounts in 214 pieces of glass. The glass type has values between 1 and 7. We will also create a KNN classifier that will group the glass class by element type.</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   0        1      2     3     4      5     6     7    8    9   10\n0   1  1.52101  13.64  4.49  1.10  71.78  0.06  8.75  0.0  0.0   1\n1   2  1.51761  13.89  3.60  1.36  72.73  0.48  7.83  0.0  0.0   1\n2   3  1.51618  13.53  3.55  1.54  72.99  0.39  7.78  0.0  0.0   1\n3   4  1.51766  13.21  3.69  1.29  72.61  0.57  8.22  0.0  0.0   1\n4   5  1.51742  13.27  3.62  1.24  73.08  0.55  8.07  0.0  0.0   1",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n      <th>5</th>\n      <th>6</th>\n      <th>7</th>\n      <th>8</th>\n      <th>9</th>\n      <th>10</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>1.52101</td>\n      <td>13.64</td>\n      <td>4.49</td>\n      <td>1.10</td>\n      <td>71.78</td>\n      <td>0.06</td>\n      <td>8.75</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>1.51761</td>\n      <td>13.89</td>\n      <td>3.60</td>\n      <td>1.36</td>\n      <td>72.73</td>\n      <td>0.48</td>\n      <td>7.83</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>1.51618</td>\n      <td>13.53</td>\n      <td>3.55</td>\n      <td>1.54</td>\n      <td>72.99</td>\n      <td>0.39</td>\n      <td>7.78</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>1.51766</td>\n      <td>13.21</td>\n      <td>3.69</td>\n      <td>1.29</td>\n      <td>72.61</td>\n      <td>0.57</td>\n      <td>8.22</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>1.51742</td>\n      <td>13.27</td>\n      <td>3.62</td>\n      <td>1.24</td>\n      <td>73.08</td>\n      <td>0.55</td>\n      <td>8.07</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/glass/glass.data'\n",
+    "glass = pd.read_csv(url,sep=',',header=None)\n",
+    "glass.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>In the next step, let's assign the observation number and RI (refractive index) data that make up the first two columns of the data set.</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "      Na    Mg    Al     Si     K    Ca   Ba   Fe  Type\n0  13.64  4.49  1.10  71.78  0.06  8.75  0.0  0.0     1\n1  13.89  3.60  1.36  72.73  0.48  7.83  0.0  0.0     1\n2  13.53  3.55  1.54  72.99  0.39  7.78  0.0  0.0     1\n3  13.21  3.69  1.29  72.61  0.57  8.22  0.0  0.0     1\n4  13.27  3.62  1.24  73.08  0.55  8.07  0.0  0.0     1",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Na</th>\n      <th>Mg</th>\n      <th>Al</th>\n      <th>Si</th>\n      <th>K</th>\n      <th>Ca</th>\n      <th>Ba</th>\n      <th>Fe</th>\n      <th>Type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>13.64</td>\n      <td>4.49</td>\n      <td>1.10</td>\n      <td>71.78</td>\n      <td>0.06</td>\n      <td>8.75</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>13.89</td>\n      <td>3.60</td>\n      <td>1.36</td>\n      <td>72.73</td>\n      <td>0.48</td>\n      <td>7.83</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>13.53</td>\n      <td>3.55</td>\n      <td>1.54</td>\n      <td>72.99</td>\n      <td>0.39</td>\n      <td>7.78</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>13.21</td>\n      <td>3.69</td>\n      <td>1.29</td>\n      <td>72.61</td>\n      <td>0.57</td>\n      <td>8.22</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>13.27</td>\n      <td>3.62</td>\n      <td>1.24</td>\n      <td>73.08</td>\n      <td>0.55</td>\n      <td>8.07</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glass.columns = ['Id','RI','Na','Mg','Al','Si','K','Ca','Ba','Fe','Type']\n",
+    "glass.drop(['Id','RI'],axis=1,inplace=True)\n",
+    "glass.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>For simplicity, let's define the non-dependent variables as X and the dependent variables as y.</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [],
+   "source": [
+    "X = glass.drop('Type',axis=1)\n",
+    "y = glass['Type']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Finally, let's create the classifier</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "KNeighborsClassifier(n_jobs=1, n_neighbors=6)"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nearest = KNeighborsClassifier(n_neighbors=6)\n",
+    "nearest.fit(X,y)\n",
+    "KNeighborsClassifier(algorithm='auto',leaf_size=30,metric='minkowski',\n",
+    "                     metric_params=None,n_jobs=1,p=2,n_neighbors=6,weights='uniform')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([1, 1, 2, 1, 1, 2, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 3, 1, 1, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 2, 2, 1, 2, 2, 2, 2, 2,\n       2, 2, 2, 1, 2, 2, 1, 3, 2, 1, 2, 2, 2, 2, 1, 1, 1, 2, 2, 2, 2, 5,\n       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 1, 1, 6, 6, 2, 2, 2,\n       2, 2, 1, 2, 1, 2, 2, 2, 2, 1, 1, 2, 1, 2, 3, 3, 1, 1, 2, 1, 3, 1,\n       2, 1, 1, 1, 3, 3, 1, 3, 1, 2, 2, 5, 5, 5, 5, 5, 2, 5, 5, 2, 2, 5,\n       6, 6, 6, 6, 7, 6, 2, 2, 7, 2, 2, 1, 2, 1, 6, 7, 7, 7, 7, 7, 7, 7,\n       7, 7, 7, 2, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7, 7], dtype=int64)"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimate = nearest.predict(X)\n",
+    "estimate"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>One of the ways to measure the performance of a model in my previous work is to divide the data we have into two as a learning and validation set, and we will use the train_test_split() function for the model as in my previous work. I explained the model arguments in my previous work.</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "       Na    Mg    Al     Si     K    Ca   Ba    Fe\n98  12.67  2.88  1.71  73.21  0.73  8.54  0.0  0.00\n75  13.02  3.58  1.51  73.12  0.69  7.96  0.0  0.00\n89  12.55  3.48  1.87  73.23  0.63  8.08  0.0  0.09\n68  13.12  3.58  0.90  72.20  0.23  9.82  0.0  0.16\n55  12.45  2.71  1.29  73.70  0.56  9.06  0.0  0.24",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Na</th>\n      <th>Mg</th>\n      <th>Al</th>\n      <th>Si</th>\n      <th>K</th>\n      <th>Ca</th>\n      <th>Ba</th>\n      <th>Fe</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>98</th>\n      <td>12.67</td>\n      <td>2.88</td>\n      <td>1.71</td>\n      <td>73.21</td>\n      <td>0.73</td>\n      <td>8.54</td>\n      <td>0.0</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>75</th>\n      <td>13.02</td>\n      <td>3.58</td>\n      <td>1.51</td>\n      <td>73.12</td>\n      <td>0.69</td>\n      <td>7.96</td>\n      <td>0.0</td>\n      <td>0.00</td>\n    </tr>\n    <tr>\n      <th>89</th>\n      <td>12.55</td>\n      <td>3.48</td>\n      <td>1.87</td>\n      <td>73.23</td>\n      <td>0.63</td>\n      <td>8.08</td>\n      <td>0.0</td>\n      <td>0.09</td>\n    </tr>\n    <tr>\n      <th>68</th>\n      <td>13.12</td>\n      <td>3.58</td>\n      <td>0.90</td>\n      <td>72.20</td>\n      <td>0.23</td>\n      <td>9.82</td>\n      <td>0.0</td>\n      <td>0.16</td>\n    </tr>\n    <tr>\n      <th>55</th>\n      <td>12.45</td>\n      <td>2.71</td>\n      <td>1.29</td>\n      <td>73.70</td>\n      <td>0.56</td>\n      <td>9.06</td>\n      <td>0.0</td>\n      <td>0.24</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train,X_test,y_train,y_test =train_test_split(X,y,test_size=0.2,random_state=123,stratify=y)\n",
+    "X_train.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "98    2\n75    2\n89    2\n68    1\n55    1\nName: Type, dtype: int64"
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Now, let's do the operations we did before on the learning set.</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "KNeighborsClassifier(n_jobs=1)"
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nearest = KNeighborsClassifier(n_neighbors=5)\n",
+    "nearest.fit(X_train,y_train)\n",
+    "\n",
+    "KNeighborsClassifier(algorithm='auto',leaf_size=30,metric='minkowski',\n",
+    "                     metric_params=None,n_jobs=1,p=2,n_neighbors=5,weights='uniform')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Let's try the model we found in the validation set.</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
