--- a/Supervised Learning/Classification Methods/ClassificationMethods.ipynb
+++ b/Supervised Learning/Classification Methods/ClassificationMethods.ipynb
@@ -556,6 +556,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([2, 2, 1, 1, 2, 1, 1, 2, 1, 2, 1, 1, 2, 2, 2, 2, 1, 7, 2, 7, 1, 1,\n       1, 1, 5, 1, 2, 7, 1, 3, 1, 1, 7, 5, 1, 2, 1, 7, 2, 1, 2, 2, 1],\n      dtype=int64)"
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimate = nearest.predict(X_test)\n",
+    "estimate"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>We know the actual values corresponding to the validation set.</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([6, 2, 2, 1, 2, 2, 2, 2, 1, 2, 1, 1, 2, 5, 7, 6, 1, 7, 2, 7, 1, 1,\n       1, 3, 5, 1, 2, 7, 1, 1, 3, 2, 7, 5, 3, 2, 1, 7, 2, 1, 2, 2, 1],\n      dtype=int64)"
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(y_test)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Let's see the accuracy rate.</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.7209302325581395"
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nearest.score(X_test,y_test)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
