--- a/Supervised Learning/Classification Methods/ClassificationMethods.ipynb
+++ b/Supervised Learning/Classification Methods/ClassificationMethods.ipynb
@@ -627,13 +627,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "outputs": [
     {
      "data": {
       "text/plain": "0.7209302325581395"
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,10 +649,33 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>There is the GridSearchCV() function to find the K parameter that gives the best result for the model we are using.</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "#We are looking for the value K, i.e. n_neighbors, which will give the best result.\n",
+    "#Let's try all values between 1 and 30.\n",
+    "grid_params = {'n_neighbors':np.arange(1,30)}\n",
+    "\n",
+    "nearest = KNeighborsClassifier()\n",
+    "\n",
+    "#We pass the estimator and parameter array to the GridSearchCV function.\n",
+    "#We also need to determine the number of cross validations."
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
