--- a/Supervised Learning/Classification Methods/ClassificationMethods.ipynb
+++ b/Supervised Learning/Classification Methods/ClassificationMethods.ipynb
@@ -662,8 +662,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 43,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'n_neighbors': 1}"
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
@@ -674,7 +683,39 @@
     "nearest = KNeighborsClassifier()\n",
     "\n",
     "#We pass the estimator and parameter array to the GridSearchCV function.\n",
-    "#We also need to determine the number of cross validations."
+    "#We also need to determine the number of cross validations.\n",
+    "nearest_cv =GridSearchCV(nearest,grid_params,cv=5)\n",
+    "\n",
+    "#We pass the X and y data to the GridSearchCV estimator we created.\n",
+    "nearest_cv.fit(X,y)\n",
+    "\n",
+    "#We use the best_params_ property to find the parameter value that gives the best result.\n",
+    "\n",
+    "nearest_cv.best_params_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.640531561461794"
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#We use the best_score_ feature to see the best result.\n",
+    "nearest_cv.best_score_"
    ],
    "metadata": {
     "collapsed": false,
