--- a/Supervised Learning/Classification Methods/ClassificationMethods.ipynb
+++ b/Supervised Learning/Classification Methods/ClassificationMethods.ipynb
@@ -702,13 +702,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "outputs": [
     {
      "data": {
       "text/plain": "0.640531561461794"
      },
-     "execution_count": 63,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,6 +716,66 @@
    "source": [
     "#We use the best_score_ feature to see the best result.\n",
     "nearest_cv.best_score_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 2) LOGISTICS REGRESSION"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Logistic regression is a method used for classification problems. Logistic regression is used in problems where the outcome is two probabilities. Let's consider problems where the variable we are predicting takes one of two different values.Examples such as whether or not the customer will buy a product, whether or not to view an ad.</b>\n",
+    "\n",
+    "- <b>Mathematical expression of logistic regression :</b>\n",
+    "\n",
+    "# $ln\\left ( \\frac{p\\left ( x \\right )}{1-p\\left ( x \\right )} \\right ) = \\hat{\\beta _{0}} + \\hat{\\beta _{1}}X$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Logistic Regression function is used in the sklearn.linear_model module for logistic regression. For this example, we will use the bank marketing dataset, which is among the 'UCI Machine Learning datasets'. In this dataset, 20 independent variables such as customer age, customer occupation, customer's marital status and There is a y column showing whether or not a deposit account has been opened.</b>"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import roc_curve,roc_auc_score\n",
+    "from sklearn.metrics import confusion_matrix,classification_report\n",
+    "\n",
+    "url = ''"
    ],
    "metadata": {
     "collapsed": false,
