--- a/Supervised Learning/Measuring Model Success/MeasuringModelSuccess.ipynb
+++ b/Supervised Learning/Measuring Model Success/MeasuringModelSuccess.ipynb
@@ -15,22 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "LinearRegression()"
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn import linear_model\n",
@@ -452,6 +444,18 @@
     "\n",
     "cp"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
