--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -26,6 +26,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>The first of the mentioned regularization techniques is L1 and the second is L2."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
