--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -38,6 +38,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# 1-) Lasso Regression"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
