--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -76,6 +76,20 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Penalty Term\n",
+    "# $L1\\sum_{j=1}^{p}\\left| \\beta _{j}\\right|$\n",
+    "<b> p : number of features"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
