--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -186,6 +186,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "X = df.drop('price',axis=1)\n",
+    "y = df['price']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
+    "                                                    test_size=0.2,\n",
+    "                                                    random_state=42)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
