--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -242,6 +242,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "train_score = lasso.score(X_train,y_train)\n",
+    "test_score = lasso.score(X_test,y_test)\n",
+    "coeff_used = np.sum(lasso.coef_!=0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
