--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -258,6 +258,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train R2 : 0.7324650909211012\n",
+      "Test R2 : 0.6862906745619393\n",
+      "Number of features with a weight greater than zero : 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Train R2 :',train_score)\n",
+    "print('Test R2 :',test_score)\n",
+    "print('Number of features with a weight greater than zero :',coeff_used)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
