--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -283,6 +283,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>The alpha parameter was used as 1. Now let's look at the model performance for different alpha values."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
