--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -308,6 +308,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train R2 (alpha = 0.01) : 0.7337398316689663\n",
+      "Test R2 (alpha = 0.01) : 0.6986142688656938\n",
+      "Number of features with a weight greater than zero (alpha = 0.01) : 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "lasso001 = Lasso(alpha=0.01,random_state=42,max_iter=1000000)\n",
+    "lasso001.fit(X_train,y_train)\n",
+    "\n",
+    "train_score001 = lasso001.score(X_train,y_train)\n",
+    "test_score001 = lasso001.score(X_test,y_test)\n",
+    "\n",
+    "coeff_used001 = np.sum(lasso001.coef_ !=0)\n",
+    "\n",
+    "print('Train R2 (alpha = 0.01) :',train_score001)\n",
+    "print('Test R2 (alpha = 0.01) :',test_score001)\n",
+    "print('Number of features with a weight greater than zero (alpha = 0.01) :',coeff_used001)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
