--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -354,6 +354,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train R2 (alpha = 0.001) : 0.7337399616438325\n",
+      "Test R2 (alpha = 0.001) : 0.6987270960928149\n",
+      "Number of features with a weight greater than zero (alpha = 0.001) : 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "lasso00001 = Lasso(alpha=0.0001,random_state=42,max_iter=1000000)\n",
+    "lasso00001.fit(X_train,y_train)\n",
+    "\n",
+    "train_score00001 = lasso00001.score(X_train,y_train)\n",
+    "test_score00001 = lasso00001.score(X_test,y_test)\n",
+    "\n",
+    "coeff_used00001 = np.sum(lasso00001.coef_ !=0)\n",
+    "\n",
+    "print('Train R2 (alpha = 0.001) :',train_score00001)\n",
+    "print('Test R2 (alpha = 0.001) :',test_score00001)\n",
+    "print('Number of features with a weight greater than zero (alpha = 0.001) :',coeff_used00001)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
