--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -400,6 +400,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train R2 : 0.733739961656849\n",
+      "Test R2 : 0.6987282352837991\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LinearRegression().fit(X_train,y_train)\n",
+    "lr_train_score = lr.score(X_train,y_train)\n",
+    "lr_test_score = lr.score(X_test,y_test)\n",
+    "\n",
+    "print('Train R2 :',lr_train_score)\n",
+    "print('Test R2 :',lr_test_score)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
