--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -685,6 +685,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [],
+   "source": [
+    "ridge_train_score = rr.score(X_train,y_train)\n",
+    "ridge_test_score = rr.score(X_test,y_test)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
