--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -699,6 +699,65 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>alpha = 100 Ridge R2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [],
+   "source": [
+    "ridge_train_score100 = rr100.score(X_train,y_train)\n",
+    "ridge_test_score100= rr100.score(X_test,y_test)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train R2 Lin.Reg :  0.733739961656849\n",
+      "Test R2 Lin.Reg :  0.6987282352837991\n",
+      "Train R2 Ridge alpha = 0.01 : 0.7337398851682211\n",
+      "Test R2 Ridge alpha = 0.01 : 0.698643301640363\n",
+      "Train R2 Ridge alpha = 100 : 0.6682250934479661\n",
+      "Test R2 Ridge alpha = 100 : 0.5584311823011989\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Train R2 Lin.Reg : ',train_score)\n",
+    "print('Test R2 Lin.Reg : ',test_score)\n",
+    "print('Train R2 Ridge alpha = 0.01 :',ridge_train_score)\n",
+    "print('Test R2 Ridge alpha = 0.01 :',ridge_test_score)\n",
+    "print('Train R2 Ridge alpha = 100 :',ridge_train_score100)\n",
+    "print('Test R2 Ridge alpha = 100 :',ridge_test_score100)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
