--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -853,10 +853,32 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# $RSS_{ElasticNet}=\\sum_{j=1}^{n}(y_{j}-\\hat{y}_{j})^{2} + L\\left (\\eta \\sum_{j=1}^{p}\\left| \\beta _{j}\\right|+(1-\\eta )\\sum_{j=1}^{p}\\left ( \\beta _{j} \\right )^2  \\right )$\n",
+    "\n",
+    "<b> L : alpha\n",
+    "<b> $\\eta$ : L1_ratio\n",
+    "<b> $1-\\eta$ : L2_ratio"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "outputs": [],
-   "source": [],
+   "source": [
+    "enet = ElasticNet(alpha=1).fit(X_train,y_train)\n",
+    "\n",
+    "train_score = enet.score(X_train,y_train)\n",
+    "test_score = enet.score(X_test,y_test)\n",
+    "coeff_used = np.sum(enet.coef_ !=0)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
