--- a/Supervised Learning/Model Regularization/Regularization.ipynb
+++ b/Supervised Learning/Model Regularization/Regularization.ipynb
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "enet = ElasticNet(alpha=1).fit(X_train,y_train)\n",
@@ -878,6 +878,32 @@
     "train_score = enet.score(X_train,y_train)\n",
     "test_score = enet.score(X_test,y_test)\n",
     "coeff_used = np.sum(enet.coef_ !=0)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train R2 : 0.670871407649752\n",
+      "Test R2 : 0.5627894869336407\n",
+      "Number of features with a weight greater than zero (alpha = 1) : 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Train R2 :',train_score)\n",
+    "print('Test R2 :',test_score)\n",
+    "print('Number of features with a weight greater than zero (alpha = 1) :',coeff_used)"
    ],
    "metadata": {
     "collapsed": false,
